Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-851

php extension fails to compile on centos 5.x

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.4
    • 0.5
    • PHP - Library
    • None
    • Patch Available

    Description

      At some point the includes for endian.h and byte_order.h were changed from

      #include <endian.h>
      #include <byteswap.h>

      to

      #include <machine/endian.h>
      #include <machine/byte_order.h>

      Unfortunately the latter files only exist on bsd and bsd derived systems like Mac OSX.

      I fixed it by using some ifdef's and using the old includes on linux.

      Patch is attached

      Attachments

        1. thrift-851.txt
          2 kB
          Todd Lipcon
        2. php-ext-include.patch
          0.5 kB
          Anthony Molinaro

        Activity

          People

            tlipcon Todd Lipcon
            djnym Anthony Molinaro
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: